# WhakerPy

./: .gitignore  AUTHORS.md  CODE_STYLE_GUIDE.md  README.md  codemeta.json  make_release.bash  makedoc.py  pyproject.toml  sample.py  sonar-project.properties
doc/: BaseHTTPDServer.html  BaseNode.html  BaseResponseRecipe.html  BaseTagNode.html  Doctype.html  EmptyNode.html  HTMLBr.html  HTMLButtonNode.html  HTMLComment.html  HTMLFooterNode.html  HTMLHeadNode.html  HTMLHeaderNode.html  HTMLHr.html  HTMLImage.html  HTMLInputText.html  HTMLMainNode.html  HTMLNavNode.html  HTMLNode.html  HTMLRadioBox.html  HTMLScriptNode.html  HTMLTree.html  HTTPDHandler.html  HTTPDStatus.html  HTTPDValueError.html  NodeAttributeError.html  NodeChildTagError.html  NodeIdentifierError.html  NodeInvalidIdentifierError.html  NodeKeyError.html  NodeParentIdentifierError.html  NodeTagError.html  NodeTypeError.html  WebSiteApplication.html  WebSiteData.html  WebSiteResponse.html  basenode.html  emptynode.html  handler.html  index.html  makedoc.py  (+15 more)
doc/statics/: accordion.js  code.css  main.css  main_sppas.css  toc.js
docs/: BaseHTTPDServer.html  BaseNode.html  BaseResponseRecipe.html  BaseTagNode.html  Blacklist.html  Doctype.html  EmptyNode.html  FileAccessChecker.html  HTMLBr.html  HTMLButtonNode.html  HTMLComment.html  HTMLFooterNode.html  HTMLHeadNode.html  HTMLHeaderNode.html  HTMLHr.html  HTMLImage.html  HTMLInputText.html  HTMLMainNode.html  HTMLNavNode.html  HTMLNode.html  HTMLRadioBox.html  HTMLScriptNode.html  HTMLTree.html  HTMLTreeError.html  HTTPDHandler.html  HTTPDHandlerUtils.html  HTTPDPolicy.html  HTTPDStatus.html  HTTPDValueError.html  NodeAttributeError.html  NodeChildTagError.html  NodeIdentifierError.html  NodeInvalidIdentifierError.html  NodeKeyError.html  NodeParentIdentifierError.html  NodeTagError.html  NodeTypeError.html  SignedURL.html  UnixPermissions.html  WSGIApplication.html  (+18 more)
docs/Whakerexa-2.1/: AUTHORS  CODE_STYLE_GUIDE.md  README.md  codemeta.json
docs/Whakerexa-2.1/docs/: autotoc.html  book.html  button.html  code.html  dialog.html  index.html  layout.html  links.html  menu-bottom.html  menu-side.html  menu.html  progressbar.html  slides.html  slides_bundle.html  sortatable.html  wexa.bundle.html  wexa.html
docs/Whakerexa-2.1/docs/video/: demo_video.webm
docs/Whakerexa-2.1/wexa_statics/css/: app.css  book.css  button.css  code.css  dialog.css  layout.css  menu.css  slides.css  sortatable.css  toggleselect.css  wexa.css
docs/Whakerexa-2.1/wexa_statics/fonts/: README.md
docs/Whakerexa-2.1/wexa_statics/js/: accessibility.js  book.js  dialog.js  dom-loader.js  links.js  logger.js  menu.js  progressbar.js  sortatable.js  toggleselect.js  wexa.bundle.js  wexa.js
docs/Whakerexa-2.1/wexa_statics/js/tests/: UnitTest.js  accessibilityTest.js  requestTest.js
docs/Whakerexa-2.1/wexa_statics/js/transport/: base_manager.js  request.js
docs/statics/: clamming.css  light.css
docs/statics/css/: clamming.css  code.css
docs/wexa_statics/css/: book.css  cards.css  panel.css  video_popup.css  wexa.css
docs/wexa_statics/fonts/: README.md
docs/wexa_statics/js/: accessibility.js  book.js  video_popup.js
docs/wexa_statics/js/purejs-tools/: OnLoadManager.js  UnitTest.js
docs/wexa_statics/js/whakerpy/: request.js
etc/: cards.css  colors_light.css  main.css  main_sppas.css  panel.css
sample/: request.js  response.py  webapp.json
sample/body_main/: any.htm  sample_123.htm
samples/: response.py  webapp.json  website.json
samples/body_main/: any.htm  other.htm
tests/: README.md  coverage.xml  requirements.txt
tests/htmlmaker/: test_basenodes.py  test_emptynodes.py  test_hexc.py  test_hnode.py  test_htree.py  test_nodetags.py  test_tagnodes.py
tests/httpd/: test_handler.py  test_permissions.py  test_status.py
tests/js/: TestFramework.js  UnitTest.js  accessibilityTest.js  requestTest.js
tests/selenium/: sample_test.py
tests/webapp/: test_permissions.py  test_webconfig.py  wsgi.py
whakerpy/: __init__.py  messages.py  request.js
whakerpy/htmlmaker/: README.md  __init__.py  hconsts.py  hexc.py  hleaf.py  hnode.py  hnodetags.py  htmlmaker.yuml  htree.py  treeelts.py  treenode.py
whakerpy/htmlmaker/basenodes/: baseelts.py  basenode.py
whakerpy/htmlmaker/emptynodes/: __init__.py  emptyelts.py  emptynode.py
whakerpy/htmlmaker/htmnodes/: __init__.py  htmelts.py  htmnode.py
whakerpy/htmlmaker/tagnodes/: tagnode.py
whakerpy/httpd/: README.md  __init__.py  handler.py  hblacklist.py  hpolicy.py  hresponse.py  hserver.py  hsignedurl.py  hstatus.py  httpd.yuml  hutils.py
whakerpy/js/: OnLoadManager.js  accessibility.js  request.js
whakerpy/webapp/: README.md  permissions.py  webapp.yuml  webconfig.py  weblocalserver.py  webresponse.py  webwsgi.py
whakerpy/website/: webconfig.py  weblocalserver.py  webresponse.py
(+15 files in other folders)
