# Tom's Obvious Minimal Language - for Whakerpy library
# https://toml.io/en/
# Allows to create the WhakerPy distribution with:
# python -m build
# ---------------------------------------------------------------------------

[project]
    name = "WhakerPy"
    version = "0.4.1"
    authors = [{ name="Brigitte Bigi", email="contact@sppas.org" }]
    description = "Web HTML maker in Python - a light web application framework"
    readme = "README.md"
    requires-python = ">=3.9"
    license = {file = "LICENSE"}
    keywords = ["python", "html", "httpd", "dynamic", "web", "app", "ui"]
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
        "Topic :: Software Development",
        "Intended Audience :: Developers",
        "Development Status :: 5 - Production/Stable"]

[project.urls]
    "Homepage" = "https://whakerpy.sf.net"
    "Pypi" = "https://pypi.org/project/whakerpy/"

# -------------------
# Distrib builder
# -------------------

[project.optional-dependencies]
    doc = [
        "pygments",
        "markdown2",
        "Clamming >=1.5"]
    dev = [
        "pylint ~=2.14.0",
        "toml ~=0.10.2"]
    test = [
        "coverage ~=7.3.0",
        "selenium ~=4.13.0",
        "python-dotenv ~=1.0.0"]

[build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
    where = ["."]
    exclude = ["tests*", "samples"]

#[tool.setuptools.packages.find]
#where = ["."]  # list of folders that contain the packages (["."] by default)
#include = ["whakerpy.*"]  # package names should match these glob patterns (["*"] by default)
#exclude = ["whakerpy.tests*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

# -------------------
# Code tests
# -------------------
# Can check this config file with:
# import coverage
# x = coverage.config.HandyConfigParser(False)
# x.read("pyproject.toml")

[tool.pytest.ini_options]
    minversion = "7.3"
    addopts = "-ra -q"
    testpaths = ["tests"]

[tool.coverage.report]
    fail_under = 5
    exclude_also = [
        "def __repr__",
        "raise AssertionError",
        "raise NotImplementedError",
        "if __name__ == .__main__.:",
        "@(abc\\.)?abstractmethod"]

[tool.coverage.run]
    source_pkgs = ["whakerpy"]
    command_line = "-m pytest"
    omit = [
        "*/test*",
        "**/__init__.py"]

[tool.coverage.xml]
    output = "tests/coverage.xml"

# -------------------
# Static code analyser
# --------------------

[tool.pylint]
    # See documentation here: https://pylint.pycqa.org/en/latest/user_guide/messages/index.html
    # Nomenclature: F=Fatal, E=Error, W=Warning, C=Convention, R=Refacto, I=Information
    disable = [
        "C0114", # (missing-module-docstring)
        "C0115", # (missing-class-docstring)
        "C0116", # (missing-function-docstring)
        "C0209", #
        "R0903", # (too-few-public-methods)
        "R0904", # (too-many-public-methods)
        "R0913", # (too-many-arguments)
        "R1716", # (chained-comparison)
        "R1734", # (use-list-literal)
        "R1735", # (use-dict-literal)
        "W0107", # (unnecessary-pass)
        "W0105", # (pointless-string-statement)
        "W0702", # (bare-except)
        "W0718", # (broad-exception-caught)
        "W0719", # (broad-exception-raised)
        "W1401"] # (anomalous-backslash-in-string)

[tool.pylint.basic]
    # Allow shorter and longer variable names than the default.
    argument-rgx = "[a-z_][a-z0-9_]*$"
    attr-rgx = "[a-z_][a-z0-9_]*$"
    variable-rgx = "[a-z_][a-z0-9_]*$"

[tool.pylint.logging]
    # The type of string formatting that logging methods do. `old` means using %
    # formatting, `new` is for `{}` formatting.
    logging-format-style = "new"
    logging-modules = ["logging"]

[tool.pylint.format]
    # Maximum number of characters on a single line.
    max-line-length = 120
    max-module-lines = 1500

[tool.pylint.main]
    # Naming style matching correct class names.
    class-naming-style = "PascalCase"
    # Regular expression matching correct class names. Overrides class-naming-style.
    # If left empty, class names will be checked with the set naming style.
    class-rgx = "[a-zA-Z][a-zA-Z]+"    # default is "[A-Z][a-z]+"

[tool.pylint.design]
    # Maximum number of arguments for function / method.
    max-args = 8   # default is 5
